# scheduler

./: .gitignore  FRONTEND_AGENT_PROMPT.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/: settings.local.json
.claude/agents/: frontend-engineer.md
.github/workflows/: ci.yml
apps/web/: .env.example  drizzle.config.ts  eslint.config.js  next.config.mjs  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/drizzle/migrations/: 0000_bizarre_ezekiel_stane.sql  relations.ts  schema.ts
apps/web/drizzle/migrations/meta/: 0000_snapshot.json  _journal.json
apps/web/scripts/: create-test-users.ts  seed.ts
apps/web/src/: env.ts  middleware.ts
apps/web/src/app/: global-error.tsx  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/create-org/: page.tsx
apps/web/src/components/: providers.tsx
apps/web/src/components/courses/: columns.tsx  course-form.tsx  courses-client.tsx  session-form.tsx  session-lecturer-manager.tsx
apps/web/src/lib/: auth.ts  export-pdf.ts
apps/web/tests/: setup.ts
apps/web/tests/e2e/: health.test.ts
engine/: .dockerignore  .env.example  Dockerfile  pyproject.toml
engine/src/: config.py  main.py
engine/src/api/: routes.py  schemas.py
engine/src/solver/: engine.py  hard_constraints.py  problem.py  soft_constraints.py  variables.py
engine/tests/: conftest.py  test_api.py  test_comprehensive.py  test_solver.py
(+88 files in other folders)
